add trashes in layer

--- a/client/stylesheets/filter.next.css
+++ b/client/stylesheets/filter.next.css
@@ -16,7 +16,7 @@
     font-weight: 700;
     font-size: 15px;
     text-transform: uppercase;
-    height: auto;
+    height: 57px;
     background: #bd2c2c;
     color: #fff;
     width: 350px;
