toggle trought districts with black naviation bar

--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -99,8 +99,8 @@
                 <p class="mark amount-trashes-mark">0</p>
             </div>
             <div>
-                <h2 class="amount-photos">Aantal Foto uploads</h2>
-                <p class="mark amount-photos-mark">0</p>
+                <h2 class="cleaningintensity">Schoonmaak intensiteit</h2>
+                <p class="mark cleaningintensity-label">0</p>
             </div>
         </section>
     </section>
