--- a/client/stylesheets/intro.next.css
+++ b/client/stylesheets/intro.next.css
@@ -8,6 +8,7 @@
     width: 50vw;
     position: absolute;
     margin: 18vh 25vw;
+    z-index: 10;
 }
 
 .slideshow {
@@ -31,49 +32,33 @@
 }
 
 .controls {
-    position: absolute;
-    width: 100%;
-}
-
-.next,
-.prev {
     opacity: 0.8;
-}
-
-.prev > img{
     position: relative;
-    left: -200px;
+    width: 100wv;
 }
-
-.next > img{
-    position: relative;
-    left: 100px;
-}
-
 
 .prev {
-    margin: 25vh 0 0 0;
+    position: absolute;
+    left: 20vw;
+    margin: 45vh 0 0 0;
 }
 
 .next {
-    margin: 25vh 0 0 0;
-}
-
-.controls span {
     position: absolute;
-    top: 50%;
-    cursor: pointer;
-    font-weight: 600;
-    font-size: 13px;
+    right: 20vw;
+    margin: 45vh 0 0 0;
+}
+.skip{
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: 500;
     text-transform: uppercase;
-    letter-spacing: 0.5px;
-    padding: .5em 1em;
+    color: #333333;
+    right: 10px;
+    bottom: 0;
+    position: absolute;
 }
 
-.controls span.prev {
-    left: 1.875em;
-}
-
-.controls span.next {
-    right: 1.875em;
+.skip:hover{
+    text-decoration: underline;
 }
