--- a/client/templates/intro/intro.html
+++ b/client/templates/intro/intro.html
@@ -9,22 +9,14 @@
             <ul id="slideshow" class="slideshow">
                 <li><img src="img/intro/slide_1.png" alt="" /></li>
                 <li><img src="img/intro/slide_2.png" alt="" /></li>
-                <li><img src="img/intro/slide_3.png" alt="" /></li>
-
+                <li><a href="/map"><img src="img/intro/slide_3.png" alt="" /></a></li>
+                <a href="/map" class="skip">sla over ></a>
             </ul>
-            <div id="controls" class="controls">
-                <span class="prev"><img src="icons/previous_white.svg" alt=""></span>
-                <span class="next"><img src="icons/next_white.svg" alt=""></span>
-            </div>
+
         </div>
-        <div class="dots">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
+        <div id="controls" class="controls">
+            <span class="prev"><img src="icons/previous_white.svg" alt=""></span>
+            <span class="next"><img src="icons/next_white.svg" alt=""></span>
         </div>
-        <a href="/map">sla over ></a>
     </main>
-
-
-
 </template>
