add cleanings intensity to map

--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -55,15 +55,15 @@
                     <p class="noselect">Schoonmaak intensiteit</p>
                     <section class="legenda">
                         <div>
-                            <img src="icons/circle.svg" alt="">
+                            <img src="icons/circle_hoog.svg" alt="">
                             <p>7X per week</p>
                         </div>
                         <div>
-                            <img src="icons/circle.svg" alt="">
+                            <img src="icons/circle_gemiddeld.svg" alt="">
                             <p>3-7X per week</p>
                         </div>
                         <div>
-                            <img src="icons/circle.svg" alt="">
+                            <img src="icons/circle_laag.svg" alt="">
                             <p>1-3X per week</p>
                         </div>
                     </section>
