--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -83,8 +83,8 @@
     </section>
     <section class="statistic none">
         <section class="statisticstitle">
-            <h2>Statestieken</h2>
-            <div class="togglefilter">
+            <h2>Statistieken</h2>
+            <div class="togglestatistics">
                 <img src="icons/close.svg" alt="closebutton" class="togglestatisticimg">
             </div>
         </section>
