--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -5,10 +5,12 @@ body {
     max-width: 100vw;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 body {
     font-family: 'Fira Sans', sans-serif;
+    position: relative;
 }
 
 .red {
