--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -90,7 +90,7 @@
         </section>
         <section class="statistics">
             <div>
-                <h2 class="grade">Waarderingscijfer</h2>
+                <h2 class="grade">Gemeten schoonheidsgraden</h2>
                 <p class="mark grade-mark">0</p>
             </div>
             <div>
