--- a/client/stylesheets/navigationbar.next.css
+++ b/client/stylesheets/navigationbar.next.css
@@ -1,8 +1,9 @@
 .navigationbar {
     background: #000;
     position: absolute;
+    padding-bottom: 20px;
     left: 0;
-    bottom: 0;
+    bottom: -100px;
     height: 80px;
     z-index: 1000;
     width: 100vw;
