Hide cleaningIntensity filter when zoomed in

--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -44,7 +44,7 @@
                 </label>
             </div>
             <div class="border"></div>
-            <div class="cleaning-intensity">
+            <div class="cleaning-intensity-div">
                 <input id="cleaning-intensity" type="checkbox" value="cleaning-intensity" checked>
                 <label for="cleaning-intensity">
                     <div class="noselect cleaningintensitydiv"></div>
@@ -65,7 +65,7 @@
                     </section>
                 </label>
             </div>
-            <div class="border"></div>
+            <div class="border cleaningBorder"></div>
         </section>
     </section>
     <section class="informotion">
