--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -77,7 +77,7 @@
             <div class="popupshadow"></div>
         </div>
     </section>
-    <section class="statistic none">
+    <section class="statistic">
         <section class="statisticstitle">
             <h2>Statistieken</h2>
             <div class="togglestatistics">
