--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -52,15 +52,18 @@
                     <section class="legenda">
                         <div>
                             <img src="icons/circle_hoog.svg" alt="">
-                            <p>7X per week</p>
+                            <p>Hoog</p>
+                            <small class="subscript">(7X per week)</small>
                         </div>
                         <div>
                             <img src="icons/circle_gemiddeld.svg" alt="">
-                            <p>3-7X per week</p>
+                            <p>Gemiddeld</p>
+                            <small class="subscript">(3-7X per week)</small>
                         </div>
                         <div>
                             <img src="icons/circle_laag.svg" alt="">
-                            <p>1-3X per week</p>
+                            <p>Laag</p>
+                            <small class="subscript">(1-3X per week)</small>
                         </div>
                     </section>
                 </label>
@@ -96,6 +99,7 @@
             <div>
                 <h2 class="cleaningintensity">Schoonmaak intensiteit</h2>
                 <p class="mark cleaningintensity-label">0</p>
+                <small class="statsubscript">0</small>
             </div>
         </section>
     </section>
