--- a/client/stylesheets/header.next.css
+++ b/client/stylesheets/header.next.css
@@ -1,6 +1,6 @@
 header {
     clear: both;
-    height: 70px;
+    height: 90px;
     background: #fff;
 }
 
@@ -9,14 +9,14 @@ header {
 }
 
 .logo > img {
-    margin: 1.2em;
-    height: 30px;
+    margin: 1.6em;
+    height: 37px;
 }
 
 .monthselect {
     right: 0px;
     position: absolute;
-    padding: 25px;
+    padding: 35px;
     height: 30px;
     display: inline-block;
     width: 140px;
@@ -26,6 +26,7 @@ header {
     width: 90px;
     text-align: center;
     display: inline-block;
+    text-transform: uppercase;
 }
 
 .months {
@@ -33,10 +34,12 @@ header {
     display: inline-block;
     width: 60%;
     padding: 0 5%;
+    margin-left: 4px;
     height: 30px;
     white-space: nowrap;
     overflow: hidden;
 }
+
 
 /*
 .month {
@@ -49,13 +52,17 @@ header {
 .previousmonth {
     display: inline-block;
     float: left;
-    width: 10%;
+    width: 9%;
+    margin-top: 3px;
+    cursor: pointer;
 }
 
 .nextmonth {
     display: inline-block;
     float: right;
-    width: 10%;
+    width: 9%;
+    margin-top: 3px;
+    cursor: pointer;
 }
 
 .districts {
@@ -91,7 +98,7 @@ header {
 .close {
     right: -150px;
     position: absolute;
-    margin: 10px 5px 10px 10px;
+    margin: 20px 11px 10px 10px;
     height: 40px;
     padding: 2px 10px;
     display: inline-block;
@@ -99,14 +106,16 @@ header {
     border-style: solid;
     border-color: #fff;
     border-left-width: 1px;
-    border-left-color: #CECECE;
+    border-left-color: #eaeaea;
+    cursor: pointer;
 }
 
 .close img {
     height: 14px;
     display: inline-block;
-    margin: 13px 0px 3px 11px;
+    margin: 13px 0px 3px 19px;
 }
+
 .close > p {
     margin: 10px;
     padding: 0 0 20px 0 0;
