--- a/client/stylesheets/navigationbar.next.css
+++ b/client/stylesheets/navigationbar.next.css
@@ -1,19 +1,26 @@
 .navigationbar {
     background: #000;
     position: absolute;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
     left: 0;
     bottom: -100px;
-    height: 80px;
+    height: 68px;
     z-index: 1000;
     width: 100vw;
 }
 
 .navigationbar img {
     display: inline-block;
-    height: 25px;
-    margin: 27.5px;
+    height: 18px;
+    margin: 26px;
     z-index: 13;
+    cursor: pointer;
+    opacity: 0.8;
+    transition: ease 0.3s;
+}
+
+.navigationbar img:hover {
+    opacity: 1;
 }
 
 .previousdistrict {
@@ -31,8 +38,11 @@
     display: inline-block;
     width: 100vw;
     color: #fff;
-    font-size: 30px;
     padding: 0;
     margin: 20px auto;
     text-align: center;
+    text-transform: uppercase;
+    font-size: 18px;
+    letter-spacing: 2px;
+    font-weight: 500;
 }
