--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,7 +1,7 @@
 html,
 body {
     box-sizing: border-box;
-    max-height: 100vh;
+/*    max-height: 100vh;*/
     max-width: 100vw;
     margin: 0;
     padding: 0;
