--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -51,18 +51,18 @@
                     <section class="legenda">
                         <div>
                             <img src="icons/circle_hoog.svg" alt="">
-                            <p>Hoog</p>
-                            <small class="subscript">(7X per week)</small>
+                            <p class="intensity">Hoog</p>
+                            <small class="subscript intensity">(7X per week)</small>
                         </div>
                         <div>
                             <img src="icons/circle_gemiddeld.svg" alt="">
-                            <p>Gemiddeld</p>
-                            <small class="subscript">(3-7X per week)</small>
+                            <p class="intensity">Gemiddeld</p>
+                            <small class="subscript intensity">(3-7X per week)</small>
                         </div>
                         <div>
                             <img src="icons/circle_laag.svg" alt="">
-                            <p>Laag</p>
-                            <small class="subscript">(1-3X per week)</small>
+                            <p class="intensity">Laag</p>
+                            <small class="subscript intensity">(1-3X per week)</small>
                         </div>
                     </section>
                 </label>
